@@ -193,6 +193,8 @@ export("+.section",
        read.lobo,
        read.met,
        read.topo,
+       read.observatory,
+       read.observatory.ctd,
        read.oce,
        read.tdr,
        read.sealevel,
