@@ -1,0 +1,63 @@
+## vim: tw=120 shiftwidth=4 softtabstop=4 expandtab:
+
+read.observatory <- function(file, 
+                    type=c("ctd"),
+                    debug=getOption("oceDebug"), processingLog, ...)
+{
+    if (debug > 2) debug <- 2
+    if (debug < 0) debug  <- 0
+    oceDebug(debug, "\b\bread.observatory(file=\"",file, "\", ...) {\n", sep="")
+    type <- match.arg(type)
+    if (type == "ctd") {
+        read.observatory.ctd(file=file, 
+                   debug=debug-1, processingLog=processingLog, ...)
+    } else {
+        stop("unknown type of observatory data")
+    }
+}
+
+read.observatory.ctd <- function(file, 
+                                 debug=getOption("oceDebug"), processingLog, ...)
+{
+    if (debug > 1)
+        debug <- 1
+    oceDebug(debug, "\b\bread.observatory.ctd(file=\"",file,
+              "\", ...) {\n", sep="")
+    if (is.character(file)) {
+        filename <- fullFilename(file)
+        file <- file(file, "r")
+        on.exit(close(file))
+    }
+    if (!inherits(file, "connection"))
+        stop("argument `file' must be a character string or connection")
+    if (!isOpen(file)) {
+        filename <- "(connection)"
+        open(file, "rb")
+        on.exit(close(file))
+    }
+    metadata <- list(filename=filename)
+    lines <- readLines(file)
+    location <- lines[grep("Latitude", lines)]
+    latitude <- as.numeric(gsub(" .*$", "", gsub("^.*Latitude\\(decdeg N\\): ", "", location)))
+    longitude <- -as.numeric(gsub(" .*$", "", gsub("^.*Longitude\\(decdeg W\\): ", "", location)))
+    depth <- as.numeric(gsub("^.*Depth\\(m\\): ", "", location))
+    check <- min(100, length(lines))
+    headerStartEnd <- grep('^%', lines[1:check])
+    d <- read.csv(text=lines[-(1:headerStartEnd[2])])
+    colNames <- strsplit(lines[headerStartEnd[2]+1], "[ ]*,[ ]*")[[1]] 
+    time <- strptime(d[,1], "%Y-%m-%dT%H:%M:%S",tz="UTC")
+    Scol <- grep("^Practical Salinity \\(psu\\)", colNames)
+    Tcol <- grep("^Temperature \\(C\\)", colNames)
+    pcol <- grep("^Pressure \\(decibar\\)", colNames)
+    salinity <- d[,Scol]
+    temperature <- d[,Tcol]
+    pressure  <- d[,pcol]
+ 
+    rval <- as.ctd(salinity=salinity, temperature=temperature, pressure=pressure,
+                   latitude=latitude, longitude=longitude,
+                   other=list(time=time))
+    oceDebug(debug, "\b\b} # read.observatory.ctd()\n")
+    rval
+}
+
+
